--- a/src/sass/libs/_bar.scss
+++ b/src/sass/libs/_bar.scss
@@ -16,7 +16,7 @@
 
 #main-bar {
   // items & background of bar content
-  $background-bar-color: #2d2d2d;
+  $background-bar-color: $mainColor3;
   $items-colors: $secondaryColor;
   $items-colors-over: $secondaryColor;
   
