--- a/src/sass/libs/_colors.scss
+++ b/src/sass/libs/_colors.scss
@@ -1,18 +1,21 @@
+$introGray: #dadada;
+
 $body: #eaeaea;
 
-$mainColor: #2e2e2e;
-$mainColor3: #2e2e2e;
-$mainColor2: #353436;
-$mainColor4: #2e2e2e;
+$mainColor: #17161a;
+$mainColor2: #17161a;
+$mainColor3: #1b1920;
+$mainColor4: #1b1920;
 
-$secondaryColor: #ff4d4d;
+$secondaryColor: #ff435c;
 $secondaryColor2: #ff4f4f;
 
 $thirdColor: #83ffda;
 $thirdColor2: #aefff8;
 $thirdColor3: #d5fff7;
 
-$gray: #aba9a9;
+$gray: #a3cfcf;
  
 $myWhite: #f3f3f6;
 $contentBackground: #EAEAEA;
+
