--- a/src/sass/libs/_intro.scss
+++ b/src/sass/libs/_intro.scss
@@ -1,7 +1,71 @@
+
 #intro {
   width: 100%;
   min-height: 480px;
   z-index: 20;
+  .intro-wrapper {
+    height: 110vh;
+    position: relative;
+
+    .my-name-container {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      z-index: -1;
+      transform: translate(-50%, -50%);
+      margin-top: -5vh;
+      width: 70vw;
+      height: 70vh;
+      min-width: 520px;
+      min-height: 420px;
+      max-width: 860px;
+      max-height: 800px;
+      
+      .my-name {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 100%;
+        transform: translate(-50%, -50%);
+        letter-spacing: -0.12em;
+        font-family: 'eleb';
+        text-align: center;
+        color: rgba(#dadada, .85);
+        font-size: calc(5vw + 9vh + 6vmin);
+        line-height: 1.05em;
+        text-shadow:  0 -2px 0.15em rgba(white, .15), 
+                      0 -4px 10px rgba($thirdColor, .5), 
+                      0 -2px 1px rgba($thirdColor, .5), 
+                      0 4px 5px rgba($secondaryColor, .8),
+                      0 4px 10px rgba($secondaryColor, .8),
+                      0 -2px 0.02em rgba(white, .5), 
+                      0 5px 0.01em rgba($mainColor, .5), 
+                      0 -2px 0.15em rgba($mainColor, .2),;
+
+        .name-line {
+          width: 100%;
+        }
+        
+        .second-line {
+          span {
+            &:nth-of-type(5) {
+              color: rgba(#000000, .75);
+            }
+          }
+          // letter-spacing: -0.04em;
+          margin-left: -0.7rem;
+          width: 110%;
+          .space {
+            display: inline-block;
+            width: 0.7em;
+          }
+          .next-line {
+            font-size: 1.4em;
+          }
+        }
+      }
+    }
+  }
 }
 
 #main_title {
