--- a/src/sass/libs/_loader.scss
+++ b/src/sass/libs/_loader.scss
@@ -30,6 +30,10 @@
 //   }
 // }
 
+.display-none {
+  display: none;
+}
+
 #main-loader {
   width: 100%;
   height: 100%;
@@ -60,15 +64,15 @@
 
     .loader-icon {
       position: absolute;
-      width: 198px;
+      width: 130px;
       left: 50%;
       top: 50%;
       transform: translate(-50%, -50%);
 
       .loader-hi {
         position: absolute;
-        right: 38px;
-        top: -5px;
+        right: 32px;
+        top: -16px;
         width: 20px;
         line-height: 1.1rem;
         font-family: 'eleb';
